# grimp-is

./: structure.txt  structureMysql.txt
doc/: lib
src/: CMakeLists.txt
src/corelib/: convert.h
src/cpp/lib/contability/: account.h  contability.cpp  operations.cpp  operations.h
src/cpp/lib/corelib/: CMakeLists.txt  dati.cpp
src/lib/: CMakeLists.txt
src/lib/contability/: account.cpp  contability.cpp  contability.h  operations.cpp  operations.h
src/lib/corelib/: convert.h  dati.cpp  dati.h  mysqlData.h
src/php/lib/: account.php  accounts.php  contability.php  dati.php  users.php
src/php/lib/contability/: accounts.php  contability.php  operations.php
